<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="24dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/activity_leaderboard_title_about"
                android:textColor="?attr/main_text_color"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/about_disclaimer"
                android:textColor="?attr/main_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/about_credits_title"
                android:textColor="?attr/main_text_color"
                android:textSize="20sp"

                android:textStyle="bold|italic"
                app:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/fragment_about_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_credits"
                android:textColor="?attr/main_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/about_questions_title"
                android:textColor="?attr/main_text_color"
                android:textSize="20sp"

                android:textStyle="bold|italic"
                app:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/fragment_about_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_questions"
                android:textColor="?attr/main_text_color"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>